# preventive-healthcare-ai

./: .gitignore  README.md  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  frontend_guide.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c425138fb65_add_new_health_metrics_fields.py  4588a52b8f3e_add_lifestyle_table.py  68617a24a818_add_health_metrics_table.py  8db611f88558_add_profile_table.py  92b328f4d876_initial_schema.py  96dae4e3eb0f_add_medical_history_table.py  b13d8c6055d3_initial_schema.py  b2d72ff41f6d_make_food_log_non_nullable_with_default.py  b346f9761ed5_add_timezone_to_users.py  be945b084fc1_initial_schema.py  d83891bbb90a_add_log_date_column.py  db576c53aa7f_fix.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  base.py  general.py  health_metrics.py  (+4 more)
backend/app/core/: __init__.py  constants.py  security.py
backend/app/db/: __init__.py  base.py  base_models.py  session.py
backend/app/models/: __init__.py  health.py  lifestyle.py  medical_history.py  profile.py  user.py
backend/app/schemas/: __init__.py  analytics.py  general.py  health.py  lifestyle.py  medical_history.py  profile.py  timezone.py  user.py
backend/app/scripts/: create_tables.py
backend/app/utils/: __init__.py  analytics_helpers.py  health.py  lifespan.py  logging_config.py  timezone.py
backend/test/: test_db_connection.py  test_security_funcs.py  test_timezones.py
(+46 files in other folders)
