[project]
name = "preventive-healthcare-bakend"
version = "0.1.0"
description = "This is a preventive healthcare backend application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "cryptography>=46.0.7",
    "fastapi>=0.136.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
